welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: not found: value dogHouse
dogHouse()
^MethodsDogHouse:22: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:28: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:38: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:48: error: not found: value dogHouse
		dogHouse();		
                ^